--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "next": "^13.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "viem": "~1.1.8",
     "wagmi": "~1.3.2"
   },
   "devDependencies": {
     "@types/node": "^18.16.12",
     "@types/react": "^18.2.6",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.15.0",
     "eslint-config-next": "^13.4.3",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.4"
   }
 }
