--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^18.2.0",
     "react-spinners": "^0.13.8",
     "tw-elements": "^1.0.0-beta3",
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "viem": "~1.1.8",
     "wagmi": "~1.3.2"
   },
@@ -22,8 +24,11 @@
     "@types/node": "^18.16.12",
     "@types/react": "^18.2.6",
     "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.15.0",
     "eslint-config-next": "^13.4.3",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.4"
