--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-spinners": "^0.13.8",
     "tw-elements": "^1.0.0-beta3",
+    "react-icons": "^4.10.1",
     "tailwind-scrollbar": "^3.0.5",
     "tailwind-scrollbar-hide": "^1.1.7",
     "viem": "~1.1.8",
