--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^13.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spinners": "^0.13.8",
     "tw-elements": "^1.0.0-beta3",
     "viem": "~1.1.8",
     "wagmi": "~1.3.2"
