--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.0.8",
+    "ethers": "^6.7.1",
     "next": "^13.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
-    "tw-elements": "^1.0.0-beta3",
-      "react-toastify": "^9.1.3",
+    "react-toastify": "^9.1.3",
     "tailwind-scrollbar": "^3.0.5",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "tw-elements": "^1.0.0-beta3",
     "viem": "~1.1.8",
     "wagmi": "~1.3.2"
   },
@@ -28,8 +29,8 @@
     "autoprefixer": "^10.4.15",
     "eslint": "^8.15.0",
     "eslint-config-next": "^13.4.3",
-    "tailwindcss": "^3.3.3",
     "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.4"
   }
 }
